--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2,8 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #adadad;
 }
 .wrapper{
   width: 960px;
   margin: 0 auto;
+}
+*{
+  box-sizing: border-box;
 }
