--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #adadad;
+  background: #e4e4e4;
 }
 .wrapper{
   width: 960px;
